[gd_scene load_steps=35 format=3 uid="uid://dw46v0cfvd7y8"]

[ext_resource type="Script" uid="uid://wiklv8lfx07u" path="res://classes/zickuza.gd" id="1_kdb3x"]
[ext_resource type="Texture2D" uid="uid://d4gshv443ayrc" path="res://assets/Zickuza/zickuza-the_yellow_duckl.png" id="2_bbnjn"]
[ext_resource type="Texture2D" uid="uid://b5vh4sn3ikl7" path="res://assets/Zickuza/PULLMYDUCKTRIGGERL.png" id="2_x40g7"]
[ext_resource type="Texture2D" uid="uid://dv25oehjl6h0u" path="res://assets/Zickuza/zickuza-the_yellow_duckr.png" id="3_dhlvq"]
[ext_resource type="Texture2D" uid="uid://bywunckcnknxp" path="res://assets/Zickuza/PULLMYDUCKTRIGGERR.png" id="3_wy011"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://b23kbhf8s7uao" path="res://classes/animtree.tres" id="3_ypdeb"]
[ext_resource type="PackedScene" uid="uid://bel6lmf6hcvmu" path="res://classes/weapon.tscn" id="4_ypdeb"]
[ext_resource type="SpriteFrames" uid="uid://03odwykshfxl" path="res://classes/weapon.tres" id="8_bbnjn"]
[ext_resource type="AudioStream" uid="uid://doqfduvnprydf" path="res://assets/sounds/laserShoot.wav" id="9_dhlvq"]
[ext_resource type="AudioStream" uid="uid://cp4nirjvujadr" path="res://assets/sounds/swingr.wav" id="10_gp5a1"]
[ext_resource type="AudioStream" uid="uid://bt2v6ohm7frvd" path="res://assets/sounds/ding.wav" id="11_dx6hc"]
[ext_resource type="AudioStream" uid="uid://dl7qvopgf4ehy" path="res://assets/sounds/boom.wav" id="12_0a1w3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fnict"]
radius = 43.0
height = 180.0

[sub_resource type="SpriteFrames" id="SpriteFrames_d4lev"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bbnjn")
}],
"loop": true,
"name": &"ZickuzaL",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dhlvq")
}],
"loop": true,
"name": &"ZickuzaR",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x40g7")
}],
"loop": true,
"name": &"duckL",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wy011")
}],
"loop": true,
"name": &"duckR",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ypdeb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("actual_center/centre:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("actual_center/centre/hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("actual_center/centre/hand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28, -4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("actual_center/centre/hand:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_84k2g"]
resource_name = "boom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre/hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(28, -4), Vector2(0, 0), Vector2(0, -99), Vector2(0, -99)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("actual_center/centre/hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.22),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5708, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("actual_center/centre/hand:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.22),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"boom"
}]
}

[sub_resource type="Animation" id="Animation_gp5a1"]
resource_name = "idlel"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre/hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-27, -16), Vector2(-27, 8), Vector2(-27, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("actual_center/centre/hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.27246, 2.10943, 2.27246]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.50329, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0.506292), Vector2(0, 2.50629), Vector2(0, 0.506292)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(69, 0)],
"method": &"centre_look_at"
}]
}

[sub_resource type="Animation" id="Animation_dhlvq"]
resource_name = "idler"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre/hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(28, -4), Vector2(22, 5), Vector2(28, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("actual_center/centre/hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [4.11718, 4.17886, 4.11718]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.499215, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(69, 0)],
"method": &"centre_look_at"
}]
}

[sub_resource type="Animation" id="Animation_dx6hc"]
resource_name = "shoot"
length = 0.5
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.02, 0.49),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_bullet"
}, {
"args": [],
"method": &"_on_shoot_end"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.49),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(0, 0)],
"method": &"centre_look_at"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("actual_center/centre/hand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.12, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(28, -4), Vector2(20, -4), Vector2(28, -4)]
}

[sub_resource type="Animation" id="Animation_d4lev"]
resource_name = "swing"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre/hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("actual_center/centre:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("actual_center/centre:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5708]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_wy011"]
resource_name = "swingd"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre/hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("actual_center/centre:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("actual_center/centre:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="Animation" id="Animation_7wis1"]
resource_name = "swingl"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre/hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("actual_center/centre:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("actual_center/centre:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 4.71239]
}

[sub_resource type="Animation" id="Animation_bbnjn"]
resource_name = "swingr"
length = 0.2
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 1.5708]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01, 0.19),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop_attack"
}, {
"args": [],
"method": &"stop_attack"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.01, 0.19),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [Vector2(0, 0)],
"method": &"centre_look_at"
}, {
"args": [Vector2(0, 0)],
"method": &"centre_look_at"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"call_swing"
}]
}

[sub_resource type="Animation" id="Animation_x40g7"]
resource_name = "swingu"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("actual_center/centre/hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("actual_center/centre:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("actual_center/centre:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-3.14159, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7wis1"]
_data = {
&"RESET": SubResource("Animation_ypdeb"),
&"boom": SubResource("Animation_84k2g"),
&"idlel": SubResource("Animation_gp5a1"),
&"idler": SubResource("Animation_dhlvq"),
&"shoot": SubResource("Animation_dx6hc"),
&"swing": SubResource("Animation_d4lev"),
&"swingd": SubResource("Animation_wy011"),
&"swingl": SubResource("Animation_7wis1"),
&"swingr": SubResource("Animation_bbnjn"),
&"swingu": SubResource("Animation_x40g7")
}

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_ypdeb"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_7wis1"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_7wis1"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_x40g7"]
nodes/Add2/node = SubResource("AnimationNodeAdd2_ypdeb")
nodes/Add2/position = Vector2(-200, 300)
nodes/AnimationNodeStateMachine/node = ExtResource("3_ypdeb")
nodes/AnimationNodeStateMachine/position = Vector2(-560, 120)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_7wis1")
nodes/StateMachine/position = Vector2(-560, 380)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_7wis1")
nodes/TimeScale/position = Vector2(0, 120)
nodes/output/position = Vector2(280, 120)
node_connections = [&"Add2", 0, &"AnimationNodeStateMachine", &"Add2", 1, &"StateMachine", &"TimeScale", 0, &"Add2", &"output", 0, &"TimeScale"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0a1w3"]
radius = 1156.8

[sub_resource type="Animation" id="Animation_2eef7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weaponsplash:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weaponsplash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weaponsplash:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weaponsplash:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0a1w3"]
resource_name = "spl"
length = 0.76
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weaponsplash:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weaponsplash:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weaponsplash:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.70847),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.3158, 1.3158)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weaponsplash:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.701314, 0.733333, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_84k2g"]
_data = {
&"RESET": SubResource("Animation_2eef7"),
&"spl": SubResource("Animation_0a1w3")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dx6hc"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("11_dx6hc")

[node name="Zickuza" type="CharacterBody2D"]
script = ExtResource("1_kdb3x")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="HurtBox" type="CollisionShape2D" parent="."]
position = Vector2(1, 10)
shape = SubResource("CapsuleShape2D_fnict")

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d4lev")
animation = &"ZickuzaR"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7wis1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_x40g7")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/Add2/add_amount = 0
parameters/AnimationNodeStateMachine/idlespace/blend_position = 0
parameters/TimeScale/scale = 1.0

[node name="actual_center" type="Node2D" parent="."]

[node name="booms" type="Area2D" parent="actual_center"]
unique_name_in_owner = true

[node name="shape" type="CollisionShape2D" parent="actual_center/booms"]
shape = SubResource("CircleShape2D_0a1w3")

[node name="centre" type="Node2D" parent="actual_center"]

[node name="hand" type="Node2D" parent="actual_center/centre"]
unique_name_in_owner = true
position = Vector2(28, -4)
rotation = 1.5708

[node name="weapon" parent="actual_center/centre/hand" instance=ExtResource("4_ypdeb")]
unique_name_in_owner = true
position = Vector2(-0.85953, -0.511087)

[node name="weaponsplash" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("8_bbnjn")
animation = &"gun"

[node name="splash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_84k2g")
}

[node name="shootaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_dhlvq")
bus = &"effects"

[node name="swingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_gp5a1")
volume_db = -14.991
bus = &"effects"

[node name="ding" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_dx6hc")
pitch_scale = 1.2
bus = &"effects"

[node name="boom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_0a1w3")
pitch_scale = 1.2
bus = &"effects"

[node name="DuckTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DuckTimer" to="." method="_on_duck_timer_timeout"]
